--- a/index.html
+++ b/index.html
@@ -5,33 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Siemens Xcelerator Chatbot</title>
     <style>
-        /* Basic Page Styling */
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
+        /* Ensure the chatbot fills the entire viewport */
+        html, body {
             margin: 0;
             padding: 0;
+            height: 100%;
             background-color: #f4f4f4;
         }
 
-        /* Header Section */
-        header {
-            background-color: #005daa;
-            color: white;
-            padding: 20px;
-            font-size: 24px;
-        }
-
-        /* Description Text */
-        p {
-            font-size: 18px;
-            margin: 20px;
-        }
-
-        /* Chatbot Container */
         .chatbot-container {
             width: 100%;
-            height: calc(100vh - 140px); /* Full screen minus header */
+            height: 100%;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -41,15 +25,14 @@
             width: 100%;
             height: 100%;
         }
+
+        /* Hide the additional input button if it's still showing */
+        gradio-app::part(interface-panel) {
+            display: none !important;
+        }
     </style>
 </head>
 <body>
-
-    <header>
-        Siemens Xcelerator Chatbot
-    </header>
-
-    <p>Interact with the chatbot below to learn more about Siemens Xcelerator services.</p>
 
     <div class="chatbot-container">
         <script type="module" src="https://gradio.s3-us-west-2.amazonaws.com/5.0.1/gradio.js"></script>
@@ -58,3 +41,4 @@
 
 </body>
 </html>
+
